--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,12 @@
     "license": "ISC",
     "dependencies": {
         "axios": "^1.13.2",
+        "bcryptjs": "^3.0.3",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "express": "^5.2.1",
+        "express-rate-limit": "^8.2.1",
+        "helmet": "^8.1.0",
         "nodemailer": "^7.0.12",
         "pg": "^8.16.3"
     },
